# solona

./: .env.example  .gitignore  BENCHMARK.md  Dockerfile  README.md  STRESS_TEST.md  deploy.sh  docker-compose.yml  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: ci.yml
anchor/: Anchor.toml  README.md
anchor/programs/nft_marketplace/: Cargo.toml
anchor/programs/nft_marketplace/src/: lib.rs
scripts/: stress-test.mjs
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src/components/layout/: DemoBanner.tsx  Header.tsx
src/components/wallet/: ConnectGate.tsx
src/features/analytics/: AnalyticsPage.tsx
src/features/marketplace/: BuyModal.tsx  Hero.tsx  ListingCard.tsx  MarketplacePage.tsx
src/features/mint/: MintPage.tsx
src/features/nft/: NftDetailPage.tsx
src/features/offers/: OffersPanel.tsx
src/features/portfolio/: ListNftModal.tsx  PortfolioPage.tsx
src/hooks/: useAdminActions.ts  useDelistNft.ts  useListNft.ts  useListings.ts  useMarketplace.ts  useMintNft.ts  useNftMetadata.ts  useNftOwner.ts  useOwnedNfts.ts  usePurchaseNft.ts  useRealtimeSync.ts  useTxRunner.ts
src/lib/: config.ts
src/lib/anchor/: decoders.ts  idl.json  program.test.ts  program.ts
src/lib/demo/: demoData.ts
src/lib/solana/: tx.ts
src/providers/: AppProviders.tsx
src/stores/: demoStore.test.ts  demoStore.ts  offersStore.test.ts  offersStore.ts
src/test/: appRender.test.tsx
src/types/: index.ts
